Fix text list alignment.

--- a/editor/index.sass
+++ b/editor/index.sass
@@ -177,7 +177,7 @@ article
         content: ""
         position: absolute
         left: 0.5rem
-        top: 1.125rem
+        top: 1rem
         width: 0.5rem
         height: 0.5rem
         border-radius: 50%
